<resources>
    <string name="user_id">31904</string>

    <string name="login_strava">Login to Strava</string>

    <string name="facebook_app_id">840281492973121</string>
    <string name="fb_login_protocol_scheme">fb840281492973121</string>

    <string name="app_name">Virtual Run Project</string>
    <string name="login_screen">Login</string>
    <string name="register_screen">Register</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="fbSignUp">Sign up with Facebook</string>
    <string name="google_login">Login with Google+</string>
    <string name="normSignIn">Login</string>
    <string name="normSignUp">Register</string>
    <string name="checkAccount1">Dont have an account?\u0020\u0020</string>
    <string name="checkAccount2">Already have an account?\u0020\u0020</string>
    <string name="signIn">Sign in</string>
    <string name="register">Register Now!</string>
    <string name="checkForgotPW">Forgot password ?</string>
    <string name="checkCurrentRaces">View current races</string>
    <string name="resetPasswordText">Điền email bên dưới và chúng tôi sẽ gửi bạn đường dẫn để bạn tạo mới mật khẩu</string>
    <string name="sendResetEmail">Send reset email</string>
    <string name="login_hint_username">User Name</string>
    <string name="login_hint_password">Password</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="verify_code">Điền code bạn nhận được qua email bên dưới để hoàn thành đăng ký, nếu bạn không nhận được email nào hãy kiểm tra lại thư mục spam</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="date">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>
